--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,5 +15,23 @@
 <body>
   <div id="app"></div>
 </body>
+<!-- Compiled and minified Materialize JavaScript -->
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 <script src="js/scripts.min.js"></script>
+<script>
+  $(() => {
+    $("#nav").sideNav();
+    $('#button-collapse').sideNav({
+      menuWidth: 300, // Default is 300
+      edge: 'right', // Choose the horizontal origin
+      closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+      draggable: true // Choose whether you can drag to open on touch screens
+    }
+  );
+  });
+</script>
 </html>
