--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fast News</title>
+  <title>Andela24</title>
   <meta name="google-signin-client_id" content="180417168863-aukt9omvuvpg25ernnc6lgupuv4m3uno.apps.googleusercontent.com">
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
