--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
   <title>Andela24</title>
   <meta name="google-signin-client_id" content="180417168863-aukt9omvuvpg25ernnc6lgupuv4m3uno.apps.googleusercontent.com">
   <!--Import Google Icon Font-->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       
   <link rel="stylesheet" type="text/css" href="css/style.css">
