feat(notification): add notification alert - include sweet-alert module for notification on favorite add and delete action fix broken show menu modal button display on smaller screen [finishes #2]

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,20 +10,11 @@
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.css">
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
   <div id="app"></div>
-  <!-- Modal Structure -->
-  <div id="modal1" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
 </body>
 <!-- Compiled and minified Materialize JavaScript -->
 <script
