chore(landingPage): enable user to select default source on first login - create a new component that display the sources [Finishes #3]

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Andela24</title>
+  <title>News Ninja</title>
+  <meta name="description" content="News Ninja brings the news you love closer to you. Browse news headlines from over 70 news sources
+  around the world with so much comfort." />
+  <meta name="author" content="Bamidele Daniel" />
+  <meta name="url" content="https://newsninja.herokuapp.com" />
   <meta name="google-signin-client_id" content="180417168863-aukt9omvuvpg25ernnc6lgupuv4m3uno.apps.googleusercontent.com">
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
